--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,7 +2,7 @@ macro_ctrlshftp: macro_ctrlshftp{
 compatible = "zmk,behavior-macro";
 label = "macro_ctrlshftp";
 #binding-cells = <0>;
-bindings = <&sk LCTRL>, <&sk LSHFT>, <&kp P>;
+bindings = <&kp LC(LS(p))>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
